sumo/tests/dfrouter/errors/detector_files/broken_detectors_file1i/errors.dfrouter
Error: Unknown lane '' for detector 'MQ11Fs1' in 'input_messstrecke.det.xml'.
Quitting (on error).
